Fix 2nd bug in dark mode toggle button and login

--- a/src/fanta.css
+++ b/src/fanta.css
@@ -25,7 +25,7 @@
     --background-gradient: '';
     --background-muted: #f8fafc;
 
-    --color-primary: #030615;
+    /* --color-primary: #030615; */
     --color-secondary: '';
     --color-tertiary: '';
     --color-accent: '';
