--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,7 @@ hr {
 
 .todo-item p {
   font-weight: 500;
+  color: black
 }
 
 .input-container {
